--- a/src/stylesheets/vars/color.scss
+++ b/src/stylesheets/vars/color.scss
@@ -5,27 +5,27 @@ $theme-medium: #778;
 $theme-darkest: #333;
 
 @function theme-darken($color) {
-  @return saturate(mix($color, $theme-darkest, 60%), (saturation($color) - saturation($theme-darkest)) / 8);
+  @return saturate(mix($color, $theme-darkest, 33.3333%), (saturation($color) - saturation($theme-darkest)) / 6);
 }
 
 @function theme-lighten($color) {
-  @return saturate(mix($color, $theme-lightest, 60%), (saturation($color) - saturation($theme-lightest)) / 8);
+  @return saturate(mix($color, $theme-lightest, 33.3333%), (saturation($color) - saturation($theme-lightest)) / 6);
 }
 
 $theme-lighter: mix($theme-ground, $theme-lightest, 50%);
 $theme-light: mix($theme-ground, $theme-medium, 50%);
-$theme-dark: mix($theme-medium, $theme-darkest, 70%);
-$theme-darker: mix($theme-ground, $theme-darkest, 30%);
+$theme-dark: mix($theme-medium, $theme-darkest, 75%);
+$theme-darker: mix($theme-medium, $theme-darkest, 50%);
 
-// brand and links
-$theme-primary: #67a;
+// branding
+$theme-primary: #569;
 $theme-primary-light: theme-lighten($theme-primary);
 $theme-primary-dark: theme-darken($theme-primary);
 
-// generic rolls
+// stoplight colors
 $theme-go: #5cc;
 $theme-yo: #f8c060;
-$theme-no: #f66;
+$theme-no: #f76;
 
 $theme-go-light: theme-lighten($theme-go);
 $theme-go-dark: theme-darken($theme-go);
