--- a/src/stylesheets/bui.scss
+++ b/src/stylesheets/bui.scss
@@ -1,6 +1,8 @@
 @import './base/typography';
-@import './components/page';
+@import './components/button';
 @import './components/card';
+@import './components/form';
+@import './components/page';
 
 html {
   box-sizing: border-box;
