--- a/src/stylesheets/components/card.scss
+++ b/src/stylesheets/components/card.scss
@@ -22,7 +22,7 @@ pre.bui-card {
   &-card {
     @include bg-lightest;
 
-    box-shadow: 0 8px 0 -4px transparentize($theme-darkest, 0.95);
+    box-shadow: 0 8px 1px -4px transparentize($theme-darkest, 0.95);
     border-radius: 2px;
     list-style: none;
     margin: $gutter-width 0;
@@ -50,12 +50,10 @@ pre.bui-card {
     }
 
     &--primary {
-      background-color: $theme-primary;
-      color: $theme-lighter;
+      @include bg-primary;
 
       & .bui-card__body {
-        background-color: $theme-primary-light;
-        color: $theme-primary-dark;
+        @include bg-primary-light;
       }
     }
 
