--- a/src/stylesheets/components/form.scss
+++ b/src/stylesheets/components/form.scss
@@ -2,81 +2,83 @@
 @import '../vars/metrics';
 @import '../mixins/color';
 
-.bui {
-  &-form {
-    &-row {
-      &:not(:last-child) {
-        margin: 0 0 $gutter-width;
-      }
-    }
-
-    &-label {
-      @include body-font-bold;
-
-      display: inline-block;
-      font-size: $font-xs;
-      margin: 0 $gutter-width / 2 $gutter-width / 4;
-    }
-
-    &-help {
-      @include caption-font;
-
-      display: inline-block;
-      font-size: $font-xs;
-      margin: $gutter-width / 4 $gutter-width / 2;
+.bui-form {
+  &-row {
+    &:not(:last-child) {
+      margin: 0 0 $gutter-width;
     }
   }
 
-  &-input-group {
-    @include bg-ground;
+  &-label {
+    @include body-font-bold;
 
-    align-items: middle;
-    border-radius: 2px;
-    display: flex;
-    overflow: hidden;
-
-    & > * {
-      flex-grow: 0;
-      padding: $gutter-width / 2;
-    }
-
-    & > .bui-input {
-      flex-grow: 1;
-      width: auto;
-
-      &:not(:last-child) {
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
-      }
-
-      &:not(:first-child) {
-        border-top-left-radius: 0;
-        border-bottom-left-radius: 0;
-      }
-    }
-  }
-
-  &-input {
-    @include bg-lightest;
-    @include body-font;
-
-    border: none;
-    border-radius: 2px;
-    box-shadow: inset 0 4px 1px transparentize($theme-darkest, 0.95);
     display: inline-block;
-    font-size: inherit;
-    height: 2.5em;
+    font-size: $font-xs;
+    margin: 0 $gutter-width / 2 $gutter-width / 4;
+  }
+
+  &-help {
+    @include caption-font;
+
+    display: inline-block;
+    font-size: $font-xs;
+    margin: $gutter-width / 4 $gutter-width / 2;
+  }
+}
+
+.bui-input-group {
+  @include bg-ground;
+
+  align-items: middle;
+  border-radius: 2px;
+  display: flex;
+  overflow: hidden;
+
+  & > * {
+    flex-grow: 0;
     padding: $gutter-width / 2;
-    width: 100%;
+  }
 
-    &--textarea {
-      height: 5em;
-      resize: vertical;
+  & > .bui-input {
+    flex-grow: 1;
+    width: auto;
+
+    &:not(:last-child) {
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
     }
 
-    &[disabled],
-    &--read-only {
-      @include bg-ground;
+    &:not(:first-child) {
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
     }
+  }
+}
+
+.bui-input {
+  @include bg-lightest;
+  @include body-font;
+
+  border: none;
+  border-radius: 2px;
+  box-shadow: inset 0 4px 1px transparentize($theme-darkest, 0.95);
+  display: inline-block;
+  font-size: inherit;
+  height: 2.5em;
+  padding: $gutter-width / 2;
+  width: 100%;
+
+  .bui-body--flat & {
+    @include bg-lighter;
+  }
+
+  &--textarea {
+    height: 5em;
+    resize: vertical;
+  }
+
+  &[disabled],
+  &--read-only {
+    @include bg-ground;
   }
 }
