add navbar support, improve form selectors, and extend mixins

--- a/src/stylesheets/bui.scss
+++ b/src/stylesheets/bui.scss
@@ -3,6 +3,7 @@
 @import './components/backdrop';
 @import './components/card';
 @import './components/form';
+@import './components/nav';
 @import './components/page';
 
 html {
