--- a/src/stylesheets/components/button.scss
+++ b/src/stylesheets/components/button.scss
@@ -9,8 +9,11 @@
   appearance: none;
   border: none;
   border-radius: 2px;
+  box-shadow:
+    inset 0 -4px transparentize($theme-darkest, 0.95),
+    inset 0 0 0 1px transparentize($theme-darkest, 0.95);
   font-size: inherit;
-  padding: $gutter-width / 2;
+  padding: 0.25em $gutter-width / 2 0.5em;
 
   &--inverse {
     @include bg-primary-light;
