--- a/src/stylesheets/components/form.scss
+++ b/src/stylesheets/components/form.scss
@@ -1,8 +1,11 @@
 @import '../vars/fonts';
 @import '../vars/metrics';
 @import '../mixins/color';
+@import '../mixins/flex';
 
 .bui-form {
+  line-height: 2.5rem;
+
   &-row {
     &:not(:last-child) {
       margin: 0 0 $gutter-width;
@@ -28,20 +31,15 @@
 
 .bui-input-group {
   @include bg-ground;
+  @include flex-row('.bui-input');
 
-  align-items: middle;
   border-radius: 2px;
-  display: flex;
-  overflow: hidden;
 
   & > * {
-    flex-grow: 0;
-    padding: $gutter-width / 2;
-  }
-
-  & > .bui-input {
-    flex-grow: 1;
-    width: auto;
+    display: inline-block;
+    height: 2.5rem;
+    padding-left: $gutter-width / 2;
+    padding-right: $gutter-width / 2;
 
     &:not(:last-child) {
       border-top-right-radius: 0;
@@ -61,11 +59,13 @@
 
   border: none;
   border-radius: 2px;
-  box-shadow: inset 0 4px 1px transparentize($theme-darkest, 0.95);
+  box-shadow:
+    inset 0 4px transparentize($theme-darkest, 0.95),
+    inset 0 0 0 1px transparentize($theme-darkest, 0.95);
   display: inline-block;
   font-size: inherit;
-  height: 2.5em;
-  padding: $gutter-width / 2;
+  height: 2.5rem;
+  padding: 0.5rem $gutter-width / 2;
   width: 100%;
 
   .bui-body--flat & {
