--- a/src/stylesheets/base/typography.scss
+++ b/src/stylesheets/base/typography.scss
@@ -13,36 +13,6 @@
     @include body-font-bold;
   }
 
-  /*
-  use of h# tags is somewhat discouraged.
-  however it remains prevalent, and we require
-  a reliable hierarchy.
-  */
-
-  & h1 {
-    font-size: $font-xxxl;
-  }
-
-  & h2 {
-    font-size: $font-xxl;
-  }
-
-  & h3 {
-    font-size: $font-xl;
-  }
-
-  & h4 {
-    font-size: $font-lg;
-  }
-
-  & h5 {
-    font-size: $font-md;
-  }
-
-  & h6 {
-    font-size: $font-sm;
-  }
-
   &-body-text {
     /*
     this should already be covered by page rules.
@@ -58,25 +28,55 @@
 
     font-size: $font-xs;
   }
+}
 
-  &-heading,
-  &-body-text,
-  &-fineprint,
-  & address,
-  & h1,
-  & h2,
-  & h3,
-  & h4,
-  & h5,
-  & h6,
-  & legend,
-  & p,
-  & pre {
-    margin-bottom: 0.5em;
-    margin-top: 0;
-  }
+/*
+use of h# tags is somewhat discouraged.
+however it remains prevalent, and we require
+a reliable hierarchy.
+*/
 
-  a:hover {
-    text-decoration: underline;
-  }
+h1 {
+  font-size: $font-xxxl;
+}
+
+h2 {
+  font-size: $font-xxl;
+}
+
+h3 {
+  font-size: $font-xl;
+}
+
+h4 {
+  font-size: $font-lg;
+}
+
+h5 {
+  font-size: $font-md;
+}
+
+h6 {
+  font-size: $font-sm;
+}
+
+.bui-heading,
+.bui-body-text,
+.bui-fineprint,
+address,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+legend,
+p,
+pre {
+  margin-bottom: 0.5em;
+  margin-top: 0;
+}
+
+a:hover {
+  text-decoration: underline;
 }
