--- a/src/stylesheets/bui.scss
+++ b/src/stylesheets/bui.scss
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,700');
+@import url('https://fonts.googleapis.com/css?family=Arimo');
 @import './base/typography';
+@import './base/context';
 @import './components/button';
-@import './components/backdrop';
+@import './components/recess';
 @import './components/card';
 @import './components/form';
 @import './components/nav';
