--- a/src/stylesheets/components/card.scss
+++ b/src/stylesheets/components/card.scss
@@ -30,5 +30,9 @@
 
   &__body {
     @include context($map: $context-light, $ancestor: '.bui-card');
+
+    .bui-body--flat .bui-card--default > & {
+      background-color: inherit;
+    }
   }
 }
