--- a/src/stylesheets/mixins/context.scss
+++ b/src/stylesheets/mixins/context.scss
@@ -2,30 +2,30 @@
 @import '../vars/color';
 
 $context-regular: (
-  '--default': ($theme-lightest, $theme-darker),
-  '--inverse': ($theme-darkest, $theme-lighter),
-  '--primary': ($theme-primary, $theme-lighter),
-  '--go': ($theme-go, $theme-darkest),
-  '--yo': ($theme-yo, $theme-darkest),
-  '--no': ($theme-no, $theme-darkest),
+  '._default': ($theme-lightest, $theme-darker),
+  '._inverse': ($theme-darkest, $theme-lighter),
+  '._primary': ($theme-primary, $theme-lighter),
+  '._go': ($theme-go, $theme-darkest),
+  '._yo': ($theme-yo, $theme-darkest),
+  '._no': ($theme-no, $theme-darkest),
 );
 
 $context-light: (
-  '--default': ($theme-lighter, $theme-darker),
-  '--inverse': ($theme-darker, $theme-lighter),
-  '--primary': ($theme-primary-light, $theme-primary-dark),
-  '--go': ($theme-go-light, $theme-go-dark),
-  '--yo': ($theme-yo-light, $theme-yo-dark),
-  '--no': ($theme-no-light, $theme-no-dark),
+  '._default': ($theme-lighter, $theme-darker),
+  '._inverse': ($theme-darker, $theme-lighter),
+  '._primary': ($theme-primary-light, $theme-primary-dark),
+  '._go': ($theme-go-light, $theme-go-dark),
+  '._yo': ($theme-yo-light, $theme-yo-dark),
+  '._no': ($theme-no-light, $theme-no-dark),
 );
 
 $context-dark: (
-  '--default': ($theme-light, $theme-darkest),
-  '--inverse': ($theme-darkest, $theme-lighter),
-  '--primary': ($theme-primary-dark, $theme-lighter),
-  '--go': ($theme-go-dark, $theme-lighter),
-  '--yo': ($theme-yo-dark, $theme-lighter),
-  '--no': ($theme-no-dark, $theme-lighter),
+  '._default': ($theme-light, $theme-darkest),
+  '._inverse': ($theme-darkest, $theme-lighter),
+  '._primary': ($theme-primary-dark, $theme-lighter),
+  '._go': ($theme-go-dark, $theme-lighter),
+  '._yo': ($theme-yo-dark, $theme-lighter),
+  '._no': ($theme-no-dark, $theme-lighter),
 );
 
 @mixin context($ancestor: false, $map: $context-regular) {
