--- a/src/stylesheets/bui.scss
+++ b/src/stylesheets/bui.scss
@@ -3,8 +3,8 @@
 @import './base/typography';
 @import './components/button';
 @import './components/recess';
-@import './components/card';
 @import './components/form';
+@import './base/container';
 @import './components/nav';
 @import './components/page';
 
