--- a/src/stylesheets/components/button.scss
+++ b/src/stylesheets/components/button.scss
@@ -1,23 +1,17 @@
 @import '../vars/color';
 @import '../vars/metrics';
-@import '../mixins/color';
-@import '../mixins/context';
 
-.bui-btn {
-  @include body-font-bold;
-  @include context;
+.btn {
+  @extend .action;
+  @extend ._bold;
 
-  appearance: none;
-  border: none;
-  border-radius: 2px;
-  box-shadow:
-    inset 0 -4px transparentize($theme-darkest, 0.95),
-    inset 0 0 0 1px transparentize($theme-darkest, 0.95);
-  font-size: inherit;
-  padding: 0.25em $gutter-width / 2 0.5em;
+  background-color: transparent;
+  border-width: 0;
+  font-size: #{$ty-sm / $ty-base}em;
+  padding: $sp-xs $sp-md;
+  text-align: center;
 
-  &[disabled] {
-    background-color: $theme-light;
-    color: $theme-medium;
+  &:hover {
+    filter: saturate(1.1);
   }
 }
