Fix error in typography imports

--- a/src/stylesheets/base/typography.scss
+++ b/src/stylesheets/base/typography.scss
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Muli:400,600,800');
-@import '../functions';
 @import '../vars/color';
-@import '../vars/size';
+@import '../vars/metrics';
 
 body,
 html {
