--- a/src/stylesheets/bui.scss
+++ b/src/stylesheets/bui.scss
@@ -1,6 +1,7 @@
 @import './base/typography';
 @import './base/container';
 @import './base/aspects';
+@import './base/modifiers';
 @import './components/nav';
 @import './components/recess';
 @import './components/tile';
