feat: Add ._tight modifier to eliminate .container spacing for more adaptable layouts

--- a/src/stylesheets/base/container.scss
+++ b/src/stylesheets/base/container.scss
@@ -1,7 +1,8 @@
 @import '../vars/metrics';
 
 .container {
-  margin: $sp-sm auto;
+  margin: auto;
+  padding: $sp-md 0;
   max-width: $bp-md;
   overflow: auto;
   position: relative;
