--- a/src/stylesheets/bui.scss
+++ b/src/stylesheets/bui.scss
@@ -11,7 +11,8 @@
 
 html,
 body {
-  // background-color: mix($c-white, $c-soft);
+  @include white;
+
   box-sizing: border-box;
   margin: 0;
   overflow-x: hidden;
